# ecom-rust

./: .env  .gitignore  Cargo.toml
src/: main.rs
src/model/: main.rs
src/services/: getall.rs  mod.rs
