[package]
name = "server-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.2.1"
bson = { version = "2.5.0", features = ["chrono-0_4"] }
chrono = "0.4.23"
dotenv = "0.15.0"
futures = "0.3.25"
mongodb = "2.3.1"
serde = "1.0.152"
tokio = "1.24.1"
